# Elastic

example/: CMakeCache.txt  CMakeLists.txt  InitTest  KeepDimOpTest  Makefile  cmake_install.cmake
example/OpTest/: test.cpp
example/randinit/: CMakeCache.txt  CMakeLists.txt  CMakeLists_linux.txt  Makefile  cmake_install.cmake  randInit  test.cpp
src/: DenseStorage.h  Elastic.h  ExpBase.h  Exp_engine.h  Gemm.h  GemmInnerLoop.h  GemmKernels.h  MetaTools.h  OpRegister.h  Pack.h  Packet.h  PlainArray.h  Shape.h  Tensor.h  base.h  init_op.h  matmul_enigen.h  memory.h  rand.h  stream.h  tensor_alloc.h  tensor_imp.h  tensor_imp_cpu.h  tensor_imp_gpu.cuh  tensor_imp_gpu.h
