cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER "g++")
option(PROJECT_DEBUG "switch to debug mode" ON)
if(${PROJECT_DEBUG} STREQUAL "ON")
	message(STATUS "build with debug mode")
	set(CMAKE_CXX_FLAGS "-W -mavx2 -mfma -std=c++17 -g -O0")
elseif(${PROJECT_DEBUG} STREQUAL "OFF")
	message(STATUS "build with relase mode")
	set(CMAKE_CXX_FLAGS "-W -mavx2 -mfma -std=c++17 -fopenmp -g -O3")
endif()
include_directories("..${PROJECT_SOURCE_DIR}/src")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
if(${TEST_PROJECT} STREQUAL "InitTest")
	project(InitTest)
	add_executable(InitTest ./randinit/test.cpp)
elseif(${TEST_PROJECT} STREQUAL "KeepDimOpTest")
	project(KeepDimOpTest)
	add_executable(KeepDimOpTest ./OpTest/test.cpp)
endif()
